--- a/Index.html
+++ b/Index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Portfólio</title>
     <link rel=" icon" href="imgs/images.jpeg.jpg" type="img/">
+
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    
     <script src="https://kit.fontawesome.com/90dd3151ae.js" crossorigin="anonymous"></script>
+
     <script src="js/index.js" defer></script>
     <script src="js/scroll.js" defer></script>
 </head>
@@ -56,7 +64,7 @@
                 <div class="sobre-card">
                     <img src="imgs/Avatar.jpeg" alt="perfil_Israel" class="sobre-perfil">
                     <h2>Progamador: Font-end junior</h2>
-                    <p>Trabalho com sites e aplicativos tanto web como mobile.</p>
+                    <p>Trabalho com sites web e aplicativos mobile.</p>
                 </div>
             </div>
         </div>
@@ -90,7 +98,7 @@
                 <div class="conhecimento">
                     <div class="conhecimento-header">
                         <img src="https://img.icons8.com/ios/50/FFFFFF/java-coffee-cup-logo--v1.png"/>
-                        <!-- <i class="fas fa-pencil-alt"></i> -->
+                        <i class="fa-brands fa-java"></i>
                         <h3>Java</h3>
                     </div>
                     <div class="conhecimento-text">
@@ -110,8 +118,7 @@
             </div>
         <div class="conhecimento">
             <div class="conhecimento-header">
-                <!-- <i class="fab fa-bootstrap"></i> -->
-                <img src="https://img.icons8.com/dotty/80/FFFFFF/react.png"/>
+                <i class="fa-brands fa-react"></i>
                 <h3>React-Native</h3>
             </div>
             <div class="conhecimento-text">
@@ -173,7 +180,7 @@
                        My<span class="c-card__title-emphasis">Social Card</span>
                    </h1>
    
-                   <p class="c-card__explanation">Para quem ser interresou nos meus trabalhos e quiser alguma parceria estarei deixando meu linkedin,Email e Instagram Profissionais no Card.</p>
+                   <p class="c-card__explanation">Para quem tem interesse ou busca sabe mais dos meus trabalhos.Aqui esta meu linkedin, Email e Instagram Profissionais no Card.</p>
    
                    <a href="#" class="c-button">Envie uma mensagem</a>
                </div>
