--- a/Index.html
+++ b/Index.html
@@ -70,7 +70,7 @@
         </div>
          <!------------------------------------------- FIM SOBRE ------------------------------------------->
         <div class="habilidades-sessao" id="habilidade">
-            <div class="titulo">
+            <div class="titulo titulo-preto">
                 <h2>Habilidades</h2>
                 <div class="linha"></div>
             </div>
@@ -91,7 +91,7 @@
                             <h3>Css</h3>
                         </div>
                         <div class="conhecimento-text">
-                            <p>Conhecimentos gerais de CSS como mudar cores,manipulação de textos, organição de texto,fontes de textos, tamanho de telas e imagens,animação de textos e imagens com keyframes.
+                            <p>Conhecimentos gerais de CSS.
                             </p>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
                     <h3>Java-script</h3>
                 </div>
                 <div class="conhecimento-text">
-                    <p>Conhecimentos gerais de JAVA-SCRIPT,pegando o html para manipulação,organição em function, usando laços de repetição como for e while,usando codicionais como if e else e manipulação de Array e objeto.
+                    <p>Conhecimentos gerais de JAVA-SCRIPT.
                     </p>
                 </div>
             </div>
@@ -122,7 +122,7 @@
                 <h3>React-Native</h3>
             </div>
             <div class="conhecimento-text">
-                <p>Conhecimentos basicos de Rect,organização de  pastas. manipulação de imgs e dados.
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam, neque? Repellat dolore perspiciatis provident ipsam harum et, dolorem quos quis
                 </p>
     </div>
       </div>
@@ -172,17 +172,17 @@
             <div class="titulo"> 
                 <h2>Contato</h2>
                 <div class="linha"></div>
-            </div>
+            </div> 
             <div class="l-main">
             <article class="c-card c-card--index js-card">
                 <div class="c-card-content">
                    <h1 class="c-card__title">
-                       My<span class="c-card__title-emphasis">Social Card</span>
+                       My<span class="c-card__title-emphasis">Contatos</span>
                    </h1>
    
                    <p class="c-card__explanation">Para quem tem interesse ou busca sabe mais dos meus trabalhos.Aqui esta meu linkedin, Email e Instagram Profissionais no Card.</p>
    
-                   <a href="#" class="c-button">Envie uma mensagem</a>
+                   <a href="#" class="c-button">Envie um Email</a>
                </div>
          </article>
                <article class="c-card c-card--instagram js-card">
