--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <h3>Css</h3>
                         </div>
                         <div class="conhecimento-text">
-                            <p>Conhecimentos gerais de CSS.
+                            <p>Conhecimentos gerais de CSS,telas responsivais, manipulação de imagens e textos e animação.
                             </p>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
                     <h3>Java-script</h3>
                 </div>
                 <div class="conhecimento-text">
-                    <p>Conhecimentos gerais de JAVA-SCRIPT.
+                    <p>Conhecimentos gerais de JAVA-SCRIPT usando array,object laços de condiçoes e repetição.
                     </p>
                 </div>
             </div>
@@ -122,7 +122,7 @@
                 <h3>React-Native</h3>
             </div>
             <div class="conhecimento-text">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam, neque? Repellat dolore perspiciatis provident ipsam harum et, dolorem quos quis
+                <p>Conhecimentos gerais de React Native,como manipulação de objetos e utlizando Apis.
                 </p>
     </div>
       </div>
