--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
            </div>
              <div class="projetos-card projetos-img3">
                  <button class="projetos-card-btn">
-                     ver mais do mais
+                     ver mais
                  </button>
              </div>
           </div>
@@ -216,7 +216,7 @@
              Contado do meu  <span class="c-card__title-emphasis">Email</span>
             </h1>
    
-           <p class="c-card__explanation">Email Profissional para Contato: israelcoimbra4142@gmail.com ou israelpina047@gmail.com</p>
+           <p class="c-card__explanation">Email Profissional para Contato:israelpina047@gmail.com</p>
    
            <a href="#" class="c-button">Ir para meu Email</a>
          </div>
