--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
     <main>
         <div class="home" id="home">
             <div class="home-container">
-                <img src="imgs/Logo_Definitiva.jpg" alt="Samurai">
+                <img src="imgs/Logo_Definitiva nova.png" alt="Samurai">
                 <p>Português: "Você consegue ver o quão infinito é?".</p>
                 <p>Mandarim: "你能看出它是多麼無限嗎？".</p>
+                <p>Autor: Takehiko Inoue. </p>
             </div>
             <div class="home-btn">
                 <button class="btn">acesse</button>
@@ -162,7 +163,7 @@
            </div>
              <div class="projetos-card projetos-img3">
                  <button class="projetos-card-btn">
-                     ver mais teste
+                     ver mais 
                  </button>
              </div>
           </div>
