--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <div class="titulo">
                 <h2>Sobre</h2>
                 <div class="linha"></div>
+                <img src="./imgs/portfólio.mp4" alt="">
             </div>
             <div class="sobre-content">
                 <div class="sobre-card">
