--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
    
                   <p class="c-card__explanation">Instagram Profissional: israelpimaz12 </p>
    
-                  <a href="https://www.instagram.com/israelpimaz12/" class="c-button">Ir para meu Instagram</a>
+                  <a href="https://www.instagram.com/israelcdev41/" class="c-button">Ir para meu Instagram</a>
               </div>
             </article>
        <article class="c-card c-card--linkedin js-card">
@@ -206,7 +206,7 @@
               </h1>
    
               <p class="c-card__explanation">Linkedin: Israel Coimbra de Pina</p>
-              <link rel="stylesheet" href="linkedin.com/in/israel-coimbra-de-pina-65b258231"/>
+              <link rel="stylesheet"/>
              
    
               <a href="https://www.linkedin.com/in/israel-coimbra-de-pina-65b258231/" class="c-button">Ir para meu Linkedin</a>
