--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="navegacao-principal">
         <div class="menu-fixo">
           <div class="navegacao-container">
-              <img  class="navegacao-container-foto" src="imgs/Logo Para MIM.png" >
+              <img  class="navegacao-container-foto" src="imgs/logo.png" >
                 <ul class="nave-intens nav" type="none" >
                     <a href="#home"><li>Home</li> </a>
                     <a href="#sobre"><li>Sobre</li></a>
@@ -38,7 +38,7 @@
     <main>
         <div class="home" id="home">
             <div class="home-container">
-                <img src="imgs/Logo_Definitiva nova.png" alt="Samurai">
+                <img src="imgs/Logo Para MIM.png" alt="Samurai">
                 <p>Português: "Você consegue ver o quão infinito é?".</p>
                 <p>Mandarim: "你能看出它是多麼無限嗎？".</p>
                 <p>Autor: Takehiko Inoue. </p>
@@ -184,7 +184,7 @@
    
                    <p class="c-card__explanation">Para quem tem interesse ou busca sabe mais dos meus trabalhos.Aqui esta meu linkedin, Email e Instagram Profissionais no Card.</p>
    
-                   <a href="#" class="c-button">Envie um Email</a>
+                   <a href="#" class="c-button">Envie um Email.</a>
                </div>
          </article>
                <article class="c-card c-card--instagram js-card">
@@ -215,7 +215,7 @@
          <article class="c-card c-card--twitter js-card">
            <div class="c-card-content">
             <h1 class="c-card__title">
-             Contado do meu  <span class="c-card__title-emphasis">Email</span>
+             Contado do meu  <span class="c-card__title-emphasis">Email.</span>
             </h1>
    
            <p class="c-card__explanation">Email Profissional para Contato:israelpina047@gmail.com</p>
