--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="shortcut icon" href="favicon/favicon-32x32.png" type="image/x-icon">
+
     <title>Portfólio</title>
     <link rel=" icon" href="imgs/images.jpeg.jpg" type="img/">
 
@@ -38,7 +40,7 @@
     <main>
         <div class="home" id="home">
             <div class="home-container">
-                <img src="imgs/Logo Para MIM.png" alt="Samurai">
+                <img src="imgs/Logo_Definitiva nova.png" alt="Samurai">
                 <p>Português: "Você consegue ver o quão infinito é?".</p>
                 <p>Mandarim: "你能看出它是多麼無限嗎？".</p>
                 <p>Autor: Takehiko Inoue. </p>
